test/langtools/tools/javac/valhalla/lworld-values/InlineAnnotationTest.out
InlineAnnotationTest.java:25:1: compiler.err.illegal.combination.of.modifiers: interface, inline
InlineAnnotationTest.java:9:1: compiler.err.concrete.supertype.for.inline.class: InlineAnnotationTest01, java.lang.Object
InlineAnnotationTest.java:20:9: compiler.err.cant.assign.val.to.final.var: x
3 errors
